# gha-fastapi

./: .coverage  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yaml
