[tool.poetry]
name = "gha-fastapi"
version = "0.1.0"
description = ""
authors = ["Erik Kvale <eirikval@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pytest = "^6.2.5"
requests = "^2.26.0"
coverage = "^5.5"
flake8 = "^3.9.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
